import UIKit

let ones = ["", "one","two","three","four", "five", "six","seven","eight","nine","ten","eleven","twelve", "thirteen", "fourteen", "fifteen","sixteen","seventeen", "eighteen","nineteen"]
 
let decades = ["","","twenty","thirty","forty", "fifty","sixty","seventy","eighty","ninety"]
 
let thousands = ["","thousand","million", "billion", "trillion", "quadrillion", "quintillion"]


...
